2.5, Corrigido incompatibilidade com Java 1.8 ;D. isBlank() -> trim()